# pumper-bot

./: .env  Cargo.toml  json_template.json
src/: main.rs  pumpfun_struct.rs
