[package]
name = "pumper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]

#Network stuff
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1.41", features = ["full"]}

#Solana stuff
jito-sdk-rust = "0.1.0"
anchor-client = { version = "0.30", features = ["async"]}